FE-dev WW-feature: initial setting

--- a/FrontEnd/public/index.css
+++ b/FrontEnd/public/index.css
@@ -4,7 +4,7 @@ html {
   word-wrap: break-word;
 }
 body {
-  background: #2f3136;
+  background: #F7F8F8;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
 }
