WW-feature: Input Fixed & Profile Image Uploader

--- a/FrontEnd/public/index.css
+++ b/FrontEnd/public/index.css
@@ -1,3 +1,7 @@
+:root {
+  --linear-blue: linear-gradient(284.21deg, #2E52FF -7.95%, #8DA1FF 138.55%);
+  
+}
 html {
   font-family: "Noto Sans KR";
   line-height: 1.2;
