--- a/FrontEnd/public/index.css
+++ b/FrontEnd/public/index.css
@@ -1,6 +1,6 @@
 :root {
   --linear-blue: linear-gradient(284.21deg, #2E52FF -7.95%, #8DA1FF 138.55%);
-  
+  font-size: 1.48vw;
 }
 html {
   font-family: "Noto Sans KR";
