--- a/BackEnd/views/main.ejs
+++ b/BackEnd/views/main.ejs
@@ -6,3 +6,12 @@
     <p>Welcome <%= user.displayName %></p>
         <a href="auth/logout">Logout</a>
 <% } %>
+
+<!-- <script src = "/socket.io/socket.io.js"></script>
+<script>
+    const socket = io.connect('http://localhost:3000', { path: '/socket.io'});
+    socket.on('equipment', function(data) {
+        console.log(data);
+        socekt.emit('equipment', 'hello');
+    })
+</script> -->
