--- a/BackEnd/views/main.ejs
+++ b/BackEnd/views/main.ejs
@@ -10,5 +10,5 @@
     socket.on('dailydata', function(data) {
         console.log('data', data);
     })
-    socket.emit('equipmentdata', 'hello');
+    socket.emit('equipmentdata', 12341234);
 </script>
