--- a/BackEnd/views/main.ejs
+++ b/BackEnd/views/main.ejs
@@ -6,7 +6,7 @@
 <script src = "/socket.io/socket.io.js"></script>
 <script>
     const socket = io.connect('http://localhost:3000', { path: '/socket.io'});
-
+    console.log("소켓 연결");
     socket.on('dailydata', function(data) {
         console.log('data', data);
     })
